--- a/less/navbar.less
+++ b/less/navbar.less
@@ -56,7 +56,9 @@
 
 .navbar-nav > li > a {
     padding: (@line-height-computed / 4) (@line-height-computed / 2) (@line-height-computed / 2) (@line-height-computed / 2);
-    text-transform: uppercase;    
+    text-transform: uppercase;
+    font-family: @font-family-heading;
+    letter-spacing: 1px;   
 }
 
 .navbar-nav > li > a:focus {
