--- a/less/scaffolding.less
+++ b/less/scaffolding.less
@@ -28,6 +28,11 @@ body {
     }
 }
 
+h1, h2, h3, h4, h5 {
+    font-family: @font-family-heading;
+    text-transform: uppercase;
+}
+
 // prevent fake bolds
 b,
 strong {
