--- a/less/application.less
+++ b/less/application.less
@@ -45,7 +45,7 @@ a:focus  {
     height: 100%;
     padding-top: 150px;
     padding-bottom: 150px;
-    background: url(../assets/img/sun.jpg) no-repeat center center !important;
+    background: url(../assets/img/door.jpg) no-repeat center center !important;
     background-size: cover !important;
     color: #fff;
 }
