--- a/_includes/about.html
+++ b/_includes/about.html
@@ -2,7 +2,7 @@
         <div class="app-row">
         <div class="app-content-full">
         <h1 class="app-heading">
-            <i class="fa fa-info-circle"></i> Agentur</h1>
+            <i class="fa fa-battery-full fa-lg"></i></i> Agentur</h1>
             <p class="app-subheading">Wir arbeiten....GERNE.</p>
             <h2>Projektbildung</h2>
                 <p>Zwischen Ihrer Idee, dem geeigneten Lösungsumsatz und dem Endprodukt liegt eine Menge - Zeit, Phantasie, Rework.</p>
