--- a/_includes/productivity.html
+++ b/_includes/productivity.html
@@ -5,10 +5,12 @@
             <div class="app-item">
                 <div class="app-content-left">
                     <h2>Logo</h2>
-                        <img class="app-img b-lazy"
-                             src="data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw=="
-                             data-src="../assets/img/customer.jpg"
-                             alt="Ade25 Hosting" />
+                        <div class="app-icon">
+                        <span class="fa-stack fa-lg">
+                        <i class="fa fa-circle fa-stack-2x"></i>
+                        <i class="fa fa-cubes fa-stack-1x fa-inverse"></i>
+                        </span>
+                        </div>
                 </div>
                 <div class="app-content-right">
                     <h2>Wie?</h2>
@@ -28,10 +30,12 @@
             <div class="app-item">
                 <div class="app-content-left">
                     <h2>Web</h2>
-                        <img class="app-img b-lazy"
-                             src="data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw=="
-                             data-src="../assets/img/customer.jpg"
-                             alt="Ade25 Hosting" />
+                        <div class="app-icon">
+                        <span class="fa-stack fa-lg">
+                        <i class="fa fa-circle fa-stack-2x"></i>
+                        <i class="fa fa-globe fa-stack-1x fa-inverse"></i>
+                        </span>
+                        </div>
                 </div>
                 <div class="app-content-right">
                     <h2>Wie?</h2>
@@ -53,10 +57,12 @@
             <div class="app-item">
                 <div class="app-content-left">
                     <h2>Hosting</h2>
-                        <img class="app-img b-lazy"
-                             src="data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw=="
-                             data-src="../assets/img/customer.jpg"
-                             alt="Ade25 Hosting" />
+                        <div class="app-icon">
+                        <span class="fa-stack fa-lg">
+                        <i class="fa fa-circle fa-stack-2x"></i>
+                        <i class="fa fa-rocket fa-stack-1x fa-inverse"></i>
+                        </span>
+                        </div>
                 </div>
                 <div class="app-content-right">
                     <h2>Wie?</h2>
@@ -78,10 +84,12 @@
             <div class="app-item">
                 <div class="app-content-left">
                     <h2>SEO</h2>
-                        <img class="app-img b-lazy"
-                             src="data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw=="
-                             data-src="../assets/img/customer.jpg"
-                             alt="Ade25 Hosting" />
+                        <div class="app-icon">
+                        <span class="fa-stack fa-lg">
+                        <i class="fa fa-circle fa-stack-2x"></i>
+                        <i class="fa fa-globe fa-stack-1x fa-inverse"></i>
+                        </span>
+                        </div>
                 </div>
                 <div class="app-content-right">
                     <h2>Wie?</h2>
@@ -103,10 +111,12 @@
             <div class="app-item">
                 <div class="app-content-left">
                     <h2>Social Media</h2>
-                        <img class="app-img b-lazy"
-                             src="data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw=="
-                             data-src="../assets/img/customer.jpg"
-                             alt="Ade25 Hosting" />
+                        <div class="app-icon">
+                        <span class="fa-stack fa-lg">
+                        <i class="fa fa-circle fa-stack-2x"></i>
+                        <i class="fa fa-globe fa-stack-1x fa-inverse"></i>
+                        </span>
+                        </div>
                 </div>
                 <div class="app-content-right">
                     <h2>Wie?</h2>
@@ -127,10 +137,12 @@
             <div class="app-item">
                 <div class="app-content-left">
                     <h2>Print</h2>
-                        <img class="app-img b-lazy"
-                             src="data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw=="
-                             data-src="../assets/img/customer.jpg"
-                             alt="Ade25 Hosting" />
+                        <div class="app-icon">
+                        <span class="fa-stack fa-lg">
+                        <i class="fa fa-circle fa-stack-2x"></i>
+                        <i class="fa fa-globe fa-stack-1x fa-inverse"></i>
+                        </span>
+                        </div>
                 </div>
                 <div class="app-content-right">
                     <h2>Wie?</h2>
@@ -154,10 +166,12 @@
             <div class="app-item">
                 <div class="app-content-left">
                     <h2>Content</h2>
-                        <img class="app-img b-lazy"
-                             src="data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw=="
-                             data-src="../assets/img/customer.jpg"
-                             alt="Ade25 Hosting" />
+                        <div class="app-icon">
+                        <span class="fa-stack fa-lg">
+                        <i class="fa fa-circle fa-stack-2x"></i>
+                        <i class="fa fa-globe fa-stack-1x fa-inverse"></i>
+                        </span>
+                        </div>
                 </div>
                 <div class="app-content-right">
                     <h2>Wie?</h2>
