--- a/_includes/intro.html
+++ b/_includes/intro.html
@@ -1,6 +1,6 @@
 <!--Video Section-->
 <section class="intro-section">
-  <video autoplay loop muted poster="../assets/img/cover.jpg" id="background">
+  <video autoplay loop muted poster="../assets/img/cover.jpg" class="app-intro-background">
         <source src="../assets/img/drops.mp4" type="video/mp4">
     </video>
     <div class="app-intro-brand">
