--- a/less/content.less
+++ b/less/content.less
@@ -3,7 +3,7 @@
 // -------------------------------------------
 
 .app-page {
-  padding: @line-height-computed 0;
+  padding: 0;
 }
 
 .app-page-title {
@@ -22,4 +22,14 @@ app-page-abstract {
   @media (min-width: @screen-sm-min) {
     font-size: 1.5rem;
   }
+}
+
+.app-icon {
+	//background: #000;
+	color: #000;
+	font-size: 10rem;
+	width: 500px;
+	height: 500px;
+	padding: @line-height-computed;
+	text-align: center;
 }
