--- a/less/application.less
+++ b/less/application.less
@@ -48,6 +48,10 @@ a:focus  {
     background: url(../assets/img/door.jpg) no-repeat center center !important;
     background-size: cover !important;
     color: #fff;
+    @media (min-width: @screen-md-min) {
+        height: 100vh;
+        margin-top: -10px;
+    }
 }
 
 .leistungen-section {
