--- a/less/content.less
+++ b/less/content.less
@@ -25,11 +25,18 @@ app-page-abstract {
 }
 
 .app-icon {
-	//background: #000;
+  font-size: 4rem;
+  background: #efefef;
 	color: #000;
-	font-size: 10rem;
-	width: 500px;
-	height: 500px;
-	padding: @line-height-computed;
+	width: 100%;
+	height: 100%;
+	//padding: @line-height-computed;
 	text-align: center;
+  @media (min-width: @screen-sm-min) {
+    font-size: 10rem;
+  }
+}
+
+.fa-stack {
+  color: @brand-primary;
 }
